--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h1 span {
 
 .container {
     display: flex;
+    margin-bottom: 50px;
     background-image: url(../images/top-banner.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -36,4 +37,11 @@ a.Hire-button {
     color: white;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.Dream {
+    display: flex;
+    background-image: url(../images/dream-bg.png);
+    background-position: right;
+    background-repeat: no-repeat;
 }
