--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,11 @@ h1 {
     font-size: 50px;
 }
 
-h1 span {
-    color: orangered;
+.spancolor {
+    color: orange;
 }
 
 .container {
-    display: flex;
-    margin-bottom: 50px;
     background-image: url(../images/top-banner.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -40,8 +38,47 @@ a.Hire-button {
 }
 
 .Dream {
-    display: flex;
     background-image: url(../images/dream-bg.png);
     background-position: right;
     background-repeat: no-repeat;
+}
+
+.flexble-container {
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 40px gray;
+}
+
+.border1 {
+    border-left: 7px solid;
+    border-image: linear-gradient(orange, tomato);
+    border-image-slice: 1;
+}
+
+.border2 {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+.experience-area {
+    background-image: url(../images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+footer p {
+    text-align: center;
 }
